Fix bug on mobile view #40

--- a/static/styles/src/style.less
+++ b/static/styles/src/style.less
@@ -2259,6 +2259,9 @@ body {
               a {
                 color: #333 !important;
                 text-decoration: none;
+                @media (max-width: 640px) {
+                  overflow-wrap: break-word;
+                }
                 &:hover {
                   text-decoration: underline;
                 }
